# OnTimeClock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: main.cpp
